<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="@dimen/x1"
        android:background="@color/banckgray"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/x35"
        android:background="@color/white"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginLeft="@dimen/x10"
            android:gravity="center_vertical"
            android:text="@string/needYN" />

        <TextView
            android:id="@+id/tv_unit"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginLeft="@dimen/x15"
            android:gravity="center_vertical"
            android:text="@string/serNumber" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginLeft="@dimen/x20"
            android:gravity="center_vertical"
            android:text="@string/serName" />

        <TextView
            android:id="@+id/textView4"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginLeft="@dimen/x20"
            android:gravity="center_vertical"
            android:text="@string/serCost" />

        <TextView
            android:id="@+id/chose_child_head_other"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginLeft="@dimen/x25"
            android:gravity="center_vertical"
            android:text="@string/serMsg" />

        <TextView
            android:id="@+id/tv_all"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginLeft="@dimen/x20"
            android:gravity="center_vertical"
            android:text="@string/serPrice" />
    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="@dimen/x1"
        android:background="@color/banckgray"
        />
</LinearLayout>