<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.sctjsj.gasdrawer.ui.activity.MainActivity">
    <FrameLayout
        android:id="@+id/replaceId"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="@dimen/x1"
        android:background="@color/banckgray"
        />
    <RelativeLayout
        android:layout_marginTop="0.5dp"
        android:layout_width="match_parent"
        android:layout_height="@dimen/x50"
        android:background="@color/white"
        >
        <RadioGroup
            android:id="@+id/main_RadioGrop"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            >
            <RadioButton
                android:padding="@dimen/x5"
                android:id="@+id/main_Rbtn_Home"
                android:checked="true"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:button="@null"
                android:text="@string/RadioBtn1"
                android:gravity="center"
                android:textColor="@drawable/main_textcolor"
                />
            <RadioButton
                android:padding="@dimen/x5"
                android:id="@+id/main_Rbtn_backLog"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:button="@null"
                android:gravity="center"
                android:text="@string/RadioBtn2"
                android:textColor="@drawable/main_textcolor"
                />
            <RadioButton
                android:visibility="gone"
                android:padding="@dimen/x5"
                android:id="@+id/main_Rbtn_Msg"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:button="@null"
                android:gravity="center"
                android:text="@string/RadioBtn3"
                android:textColor="@drawable/main_textcolor"
                />
            <RadioButton
                android:padding="@dimen/x5"
                android:id="@+id/main_Rbtn_Mine"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:button="@null"
                android:gravity="center"
                android:text="@string/RadioBtn4"
                android:textColor="@drawable/main_textcolor"
                />
        </RadioGroup>
        <TextView
            android:id="@+id/tv"
            android:layout_alignParentRight="true"
            android:layout_marginRight="@dimen/x105"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </RelativeLayout>
</LinearLayout>
