<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_autograph"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.sctjsj.gasdrawer.ui.activity.AutographActivity">
    <!--头布局-->
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/x40"
        android:background="@color/blue"
        >
        <ImageView
            android:id="@+id/iv_back"
            android:layout_alignParentLeft="true"
            android:layout_width="@dimen/x25"
            android:layout_height="@dimen/x25"
            android:layout_marginLeft="@dimen/x10"
            android:layout_centerInParent="true"
            android:src="@drawable/ic_back" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/autograph"
            android:layout_centerInParent="true"
            android:textSize="@dimen/x17"
            android:gravity="center"
            android:textColor="@color/white"
            />
        <TextView
            android:id="@+id/tv_affirm"
            android:layout_alignParentRight="true"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/x25"
            android:layout_marginRight="@dimen/x10"
            android:layout_centerInParent="true"
            android:gravity="center"
            android:textSize="@dimen/x14"
            android:textColor="@color/white"
            android:text="@string/autograph_tv_save"
            />
    </RelativeLayout>
    <RelativeLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <!--自定义签名view-->
        <com.sctjsj.gasdrawer.ui.CustomView.LinePathView
            android:id="@+id/autograph_linepath"
            android:background="#FFFFFF"
            android:layout_centerInParent="true"
            android:layout_gravity="center_horizontal"
            android:layout_width="@dimen/x320"
            android:layout_height="@dimen/x320" />
        <Button
            android:text="@string/autograph_tv_clear"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="@dimen/x5"
            android:id="@+id/autograph_bt_clear"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </RelativeLayout>

</LinearLayout>
