<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    style="@style/myAppTheme"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/banckgray">
    <LinearLayout
    android:layout_width="match_parent"
    android:layout_height="@dimen/x40"
    android:background="@color/blue"
    android:gravity="center"
    >
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:text="@string/home_page"
        android:textSize="@dimen/x17"
        android:gravity="center"
        android:textColor="@color/white"
        />
</LinearLayout>

    <ScrollView
        android:id="@+id/home_ScroView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scrollbars="none"
        >
        <LinearLayout
            android:focusable="true"
            android:focusableInTouchMode="true"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            >
            <!--广告轮询条 -->
          <com.youth.banner.Banner
            android:id="@+id/home_banner"
            android:layout_width="match_parent"
            android:layout_height="@dimen/x170"
              >
          </com.youth.banner.Banner>
            <!-- 中间三块-->
            <LinearLayout
                android:background="@color/white"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/x10"
                android:gravity="center"
                android:orientation="vertical"
                android:padding="@dimen/x5"
                >
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/x50"
                    android:orientation="horizontal"
                    >
                    <ImageView
                        android:id="@+id/home_design_img"
                        android:padding="@dimen/x2"
                        android:layout_width="0dp"
                        android:layout_weight="1"
                        android:layout_height="match_parent"
                        android:src="@drawable/design_icon"
                        />
                    <ImageView
                        android:id="@+id/home_instal_img"
                        android:padding="@dimen/x2"
                        android:layout_width="0dp"
                        android:layout_weight="1"
                        android:layout_height="match_parent"
                        android:src="@drawable/install"
                        />
                    <ImageView
                        android:id="@+id/home_weixiu_img"
                        android:padding="@dimen/x2"
                        android:layout_width="0dp"
                        android:layout_weight="1"
                        android:layout_height="match_parent"
                        android:src="@drawable/backlog_max"
                        />
                    <ImageView
                        android:id="@+id/home_sh_img"
                        android:padding="@dimen/x2"
                        android:layout_width="0dp"
                        android:layout_weight="1"
                        android:layout_height="match_parent"
                        android:src="@drawable/finish"/>
                </LinearLayout>
                <LinearLayout
                    android:layout_marginTop="@dimen/x5"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    >
                    <TextView
                        android:layout_width="0dp"
                        android:layout_weight="1"
                        android:layout_height="@dimen/x15"
                        android:text="规划"
                        android:gravity="center"
                        />
                    <TextView
                        android:layout_width="0dp"
                        android:layout_weight="1"
                        android:layout_height="@dimen/x15"
                        android:text="@string/homeImg"
                        android:gravity="center"
                        />
                    <TextView
                        android:layout_width="0dp"
                        android:layout_weight="1"
                        android:layout_height="@dimen/x15"
                        android:text="@string/homeImg2"
                        android:gravity="center"
                        />
                    <TextView
                        android:layout_width="0dp"
                        android:layout_weight="1"
                        android:layout_height="@dimen/x15"
                        android:text="@string/homeImg3"
                        android:gravity="center"
                        />
                </LinearLayout>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/x35"
                android:orientation="horizontal"
                android:background="@color/blue"
                android:layout_marginTop="@dimen/x10"
                android:gravity="center_vertical"
                >
                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="@dimen/x25"
                    android:src="@drawable/horn"
                    android:layout_marginLeft="@dimen/x15"
                    />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:text="@string/homeinfo"
                    android:gravity="center"
                    android:layout_marginLeft="@dimen/x10"
                    android:textColor="@color/white"
                    />
                <TextView
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="match_parent"
                    />
                <TextView
                    android:id="@+id/home_more_Txt"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:layout_marginRight="@dimen/x15"
                    android:text="@string/homemore"
                    android:textColor="@color/white"
                    />
            </LinearLayout>
            <ListView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:id="@+id/home_InFo_listView"
                android:background="@color/white"
                >
            </ListView>
        </LinearLayout>
    </ScrollView>
</LinearLayout>