<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_mine_msg"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/banckgray"
    tools:context="com.sctjsj.gasdrawer.ui.activity.MineMsgActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/x40"
        android:background="@color/blue"
        android:gravity="center"
        >
        <ImageView
            android:id="@+id/mine_msg_back"
            android:layout_width="@dimen/x25"
            android:layout_height="@dimen/x25"
            android:layout_marginLeft="@dimen/x10"
            android:src="@drawable/ic_back"
            />
        <TextView
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="match_parent"
            android:text="@string/user_msg_title"
            android:textSize="@dimen/x17"
            android:gravity="center"
            android:textColor="@color/white"
            android:layout_marginLeft="@dimen/x15"
            android:layout_marginRight="@dimen/x50"
            />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/x40"
        android:layout_marginTop="@dimen/x10"
        android:background="@color/white"
        android:orientation="horizontal"
        >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center_vertical"
            android:text="@string/user_msg_name"
            android:layout_marginLeft="@dimen/x10"
            android:textSize="@dimen/x15"
            />
        <TextView
            android:id="@+id/mine_msg_name"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center_vertical|right"
            android:text="周设计"
            android:layout_marginRight="@dimen/x10"
            android:textSize="@dimen/x15"
            android:textColor="@color/title_one"
            />
    </LinearLayout>
    <TextView
        android:background="@color/banckgray"
        android:layout_width="match_parent"
        android:layout_height="@dimen/x1" />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/x40"
        android:background="@color/white"
        android:orientation="horizontal"
        >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center_vertical"
            android:text="@string/user_msg_work"
            android:layout_marginLeft="@dimen/x10"
            android:textSize="@dimen/x15"
            />
        <TextView
            android:id="@+id/mine_msg_work"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center_vertical|right"
            android:text="安装工程师"
            android:layout_marginRight="@dimen/x10"
            android:textSize="@dimen/x15"
            android:textColor="@color/title_one"
            />
    </LinearLayout>
    <TextView
        android:background="@color/banckgray"
        android:layout_width="match_parent"
        android:layout_height="@dimen/x1" />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/x40"
        android:background="@color/white"
        android:orientation="horizontal"
        >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center_vertical"
            android:text="@string/user_msg_phone"
            android:layout_marginLeft="@dimen/x10"
            android:textSize="@dimen/x15"
            />
        <TextView
            android:id="@+id/mine_msg_phone"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center_vertical|right"
            android:text="18728888305"
            android:layout_marginRight="@dimen/x10"
            android:textSize="@dimen/x15"
            android:textColor="@color/title_one"
            />
    </LinearLayout>


</LinearLayout>
