<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/banckgray"
    tools:context="com.sctjsj.gasdrawer.ui.activity.ProgramAdvocacyActivity">


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/x40"
        android:background="@color/blue"
        >
        <ImageView
            android:id="@+id/program_back"
            android:layout_alignParentLeft="true"
            android:layout_width="@dimen/x25"
            android:layout_height="@dimen/x25"
            android:layout_marginLeft="@dimen/x10"
            android:layout_centerInParent="true"
            android:src="@drawable/ic_back" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/program_advocacy"
            android:layout_centerInParent="true"
            android:textSize="@dimen/x17"
            android:gravity="center"
            android:textColor="@color/white"
            />
    </RelativeLayout>

    <!--派工记录-->
    <LinearLayout
        android:layout_marginTop="@dimen/x10"
        android:gravity="center"
        android:orientation="vertical"
        android:background="@color/white"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:gravity="center_vertical"
            android:layout_marginLeft="@dimen/x10"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="@dimen/x40">
            <TextView
                android:gravity="center"
                android:text="@string/Installation_mode"
                android:textSize="@dimen/x13"
                android:layout_width="wrap_content"
                android:layout_height="match_parent" />
            <TextView
                android:id="@+id/erectwork_tv_installation_mode"
                android:gravity="center"
                android:textSize="@dimen/x13"
                android:layout_width="wrap_content"
                android:layout_height="match_parent" />
        </LinearLayout>


        <TextView
            android:background="@color/banckgray"
            android:layout_width="match_parent"
            android:layout_height="@dimen/x1" />

        <LinearLayout
            android:gravity="center_vertical"
            android:layout_marginLeft="@dimen/x10"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="@dimen/x40">
            <TextView
                android:gravity="center"
                android:text="@string/Planning_date"
                android:textSize="@dimen/x13"
                android:layout_width="wrap_content"
                android:layout_height="match_parent" />
            <TextView
                android:id="@+id/program_GHdate"
                android:gravity="center"
                android:textSize="@dimen/x13"
                android:layout_width="wrap_content"
                android:layout_height="match_parent" />
        </LinearLayout>

        <TextView
            android:background="@color/banckgray"
            android:layout_width="match_parent"
            android:layout_height="@dimen/x1" />

        <LinearLayout
            android:gravity="center_vertical"
            android:layout_marginLeft="@dimen/x10"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="@dimen/x40">
            <TextView
                android:gravity="center"
                android:text="@string/Payment_date"
                android:textSize="@dimen/x13"
                android:layout_width="wrap_content"
                android:layout_height="match_parent" />
            <TextView
                android:id="@+id/program_JFdate"
                android:layout_marginRight="@dimen/x5"
                android:gravity="center"
                android:textSize="@dimen/x13"
                android:layout_width="wrap_content"
                android:layout_height="match_parent" />
        </LinearLayout>

    </LinearLayout>

</LinearLayout>
